--- a/Resources/css/site.css
+++ b/Resources/css/site.css
@@ -26,6 +26,10 @@ nav {
     width: 100%;
     overflow: hidden;
     height: 4.2rem;
+    outline-color: #BBBBBB;
+    outline-width: 1px;
+    outline-style: inset;
+    box-shadow: 0 0 25px 0 rgba(0,0,0,0.2);
 }
 
 div.nav-soon {
