--- a/Site/Resources/css/index.css
+++ b/Site/Resources/css/index.css
@@ -101,22 +101,22 @@ main {
         main section.text {
         }
 
+            main section.text p {
+                max-width: 28rem;
+                margin: auto;
+                font-family: 'Heebo Thin';
+                font-size: larger;
+                color: white;
+            }
+
             main section.text h1 {
                 font-size: 2.7rem;
                 margin: 1.3rem;
                 color: white;
             }
 
-            main section.text .setence {
-                width: 100%;
-                text-align: center;
-                font-family: 'Heebo Thin';
-            }
-
-                main section.text .setence .content {
-                    max-width: 28rem;
-                    margin: auto;
-                    font-size: larger;
+                main section.text h1 span {
+                    font-size: 2.8rem;
                 }
 
         main section.read-more {
@@ -145,37 +145,50 @@ section.body {
 }
 
 section.advantages div.cards {
-    display: inline-flex;
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: safe center;
     margin: 1rem;
 }
 
-section.advantages .header,
-section.advantages .contact {
+section.body .header {
     text-align: center;
+    margin-top: 5rem;
 }
 
-    section.advantages .header h1,
-    section.advantages .contact {
+    section.body .header h1 {
         font-size: xx-large;
     }
 
-        section.advantages .header p,
-        section.advantages .contact p {
-            max-width: 35rem;
-            margin: 1rem auto 3rem auto;
-            font-size: large;
-        }
+    section.body .header p {
+        max-width: 35rem;
+        margin: 1rem auto 3rem auto;
+        font-size: large;
+    }
+
+section.contact .left {
+    display: inline-grid;
+    text-align: center;
+}
+
+    section.contact .left img {
+        margin: 0rem auto 2rem auto;
+    }
+
+    section.contact .left [type=button] {
+        width: fit-content;
+        margin: auto;
+    }
 
 div.cards .feature {
     max-width: 13rem;
     text-align: center;
-    padding: 1rem;
+    padding: 1rem .5rem;
     background: #e5e5e5;
     border-radius: 1rem;
     box-shadow: 0px 10px 42px -16px rgba(0,0,0,0.75);
-    margin: 1rem;
+    margin: .5rem;
     cursor: pointer;
     transition: .3s ease-out;
 }
@@ -186,7 +199,8 @@ div.cards .feature {
     }
 
 .feature h1 {
-    color: var(--color-text-title);
+    color: var(--color-secondary);
+    font-size: x-large;
 }
 
 .feature p {
@@ -319,14 +333,14 @@ footer {
         }
 
         .content-divided .content h1 {
-            font-size: 2rem;
+            font-size: xx-large;
             color: var(--color-secondary);
         }
 
         .content-divided .content p {
             max-width: 21rem;
             margin: 1.25rem auto;
-            font-size: 1.075rem;
+            font-size: large;
         }
 
         .content-divided .content.background-gradient {
@@ -356,6 +370,14 @@ footer {
                     margin: 0 auto;
                 }
 
+.ocutor.normal {
+    background-image: url(../img/blob-scene-1.png) !important;
+}
+
+.ocutor.extreme {
+    background-image: url(../img/blob-scene-2.png) !important;
+}
+
 h1, h2, h3, h4, h5 {
     color: var(--color-text-title);
     font-family: 'Heebo Bold';
@@ -368,23 +390,24 @@ p {
     color: var(--color-text-setence);
 }
 
-    p span {
-        background: var(--color-primary);
-        color: white;
-        padding: 0 .2rem;
-        font-family: 'Heebo Thin';
-        font-weight: 600;
-        font-size: 1.055rem;
-        font-style: italic;
-        margin: 0 .125rem;
-    }
+span {
+    background: var(--color-primary);
+    color: white;
+    padding: 0 .2rem;
+    font-family: 'Heebo Thin';
+    font-weight: 600;
+    font-size: 1.055rem;
+    font-style: italic;
+    margin: 0 .125rem; /*
+    animation: SpanTextAnimation 4s ease infinite;*/
+}
 
-    p b {
-        color: var(--color-primary);
-        font-family: 'Heebo Bold';
-        font-weight: 300;
-        text-transform: uppercase;
-    }
+b {
+    color: var(--color-primary);
+    font-family: 'Heebo Bold';
+    font-weight: 300;
+    text-transform: uppercase;
+}
 
 .screen-reader-text {
     clip: rect(1px, 1px, 1px, 1px);
@@ -571,5 +594,15 @@ p {
 
     100% {
         transform: translate3d(0, 0, 1rem);
+    }
+}
+
+@keyframes SpanTextAnimation {
+    0% {
+        transform: translate3d(-10rem, 0, 0);
+    }
+
+    100% {
+        transform: translate3d(0, 0, 0);
     }
 }
