--- a/Site/Resources/css/index.css
+++ b/Site/Resources/css/index.css
@@ -41,32 +41,32 @@ nav {
     background-color: #6a817854;
 }
 
-    nav .content {
-        display: inline-flex;
-    }
+nav .content {
+    display: inline-flex;
+}
 
-    nav .logo {
-        width: 7.5rem;
-        height: 2.5rem;
-        transition: 0.3s;
-        border-radius: 2rem;
-        left: 2rem;
-        padding: 0.5rem;
-        margin: 0 2rem;
-        cursor: pointer;
-        background: #a5a5a542;
-        box-shadow: 0px 10px 42px -16px rgba(0,0,0,0.75);
-        -webkit-box-shadow: 0px 10px 42px -16px rgba(0,0,0,0.75);
-        -moz-box-shadow: 0px 10px 42px -16px rgba(0,0,0,0.75);
-    }
+nav .logo {
+    width: 7.5rem;
+    height: 2.5rem;
+    transition: 0.3s;
+    border-radius: 2rem;
+    left: 2rem;
+    padding: 0.5rem;
+    margin: 0 2rem;
+    cursor: pointer;
+    background: #a5a5a542;
+    box-shadow: 0px 10px 42px -16px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0px 10px 42px -16px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 10px 42px -16px rgba(0, 0, 0, 0.75);
+}
 
-        nav .logo:hover {
-            transition: 0.3s;
-            transform: perspective(16rem) translate3d(0,0,.45rem);
-            box-shadow: 0px 10px 42px -2px rgba(0,0,0,0.75);
-            -webkit-box-shadow: 0px 10px 42px -2px rgba(0,0,0,0.75);
-            -moz-box-shadow: 0px 10px 42px -2px rgba(0,0,0,0.75);
-        }
+nav .logo:hover {
+    transition: 0.3s;
+    transform: perspective(16rem) translate3d(0, 0, .45rem);
+    box-shadow: 0px 10px 42px -2px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0px 10px 42px -2px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 10px 42px -2px rgba(0, 0, 0, 0.75);
+}
 
 main {
     background: linear-gradient(121deg, var(--color-secondary), #102C57);
@@ -82,63 +82,62 @@ main {
     padding: 15% 0 7rem 0;
 }
 
-    main::before {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 13.3rem;
-        background: url(../img/wave.svg);
-        background-repeat: repeat-x;
-        z-index: 0;
-    }
+main::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 13.3rem;
+    background: url(../img/wave.svg);
+    background-repeat: repeat-x;
+    z-index: 0;
+}
 
-    main section {
-        color: white;
-    }
+main section {
+    color: white;
+}
 
-        main section.text {
-        }
+main section.text {}
 
-            main section.text p {
-                max-width: 28rem;
-                margin: auto;
-                font-family: 'Heebo Thin';
-                font-size: larger;
-                color: white;
-            }
+main section.text p {
+    max-width: 28rem;
+    margin: auto;
+    font-family: 'Heebo Thin';
+    font-size: larger;
+    color: white;
+}
 
-            main section.text h1 {
-                font-size: 2.7rem;
-                margin: 1.3rem;
-                color: white;
-            }
+main section.text h1 {
+    font-size: 2.7rem;
+    margin: 1.3rem;
+    color: white;
+}
 
-                main section.text h1 span {
-                    font-size: 2.8rem;
-                }
+main section.text h1 span {
+    font-size: 2.8rem;
+}
 
-        main section.read-more {
-            margin-top: 5rem;
-        }
+main section.read-more {
+    margin-top: 5rem;
+}
 
-            main section.read-more p {
-                margin: 0;
-                color: white;
-            }
+main section.read-more p {
+    margin: 0;
+    color: white;
+}
 
-            main section.read-more img.arrow {
-                width: 3rem;
-                margin: 0;
-                animation: MoreArrowAnimation 1.3s cubic-bezier(0.61, 0.01, 0.49, 0.8) infinite;
-            }
+main section.read-more img.arrow {
+    width: 3rem;
+    margin: 0;
+    animation: MoreArrowAnimation 1.3s cubic-bezier(0.61, 0.01, 0.49, 0.8) infinite;
+}
 
-                main section.read-more img.arrow:hover {
-                    transform: perspective(6rem);
-                    cursor: pointer;
-                    animation: none;
-                }
+main section.read-more img.arrow:hover {
+    transform: perspective(6rem);
+    cursor: pointer;
+    animation: none;
+}
 
 section.body {
     margin: 0 5%;
@@ -157,29 +156,35 @@ section.body .header {
     margin-top: 5rem;
 }
 
-    section.body .header h1 {
-        font-size: xx-large;
-    }
+section.body .header h1 {
+    font-size: xx-large;
+}
 
-    section.body .header p {
-        max-width: 35rem;
-        margin: 1rem auto 3rem auto;
-        font-size: large;
-    }
+section.body .header p {
+    max-width: 35rem;
+    margin: 1rem auto 3rem auto;
+    font-size: large;
+}
 
 section.contact .left {
     display: inline-grid;
     text-align: center;
+    background: white;
+    z-index: 10;
 }
 
-    section.contact .left img {
-        margin: 0rem auto 2rem auto;
-    }
+section.contact .left img {
+    margin: 0 auto;
+}
 
-    section.contact .left [type=button] {
-        width: fit-content;
-        margin: auto;
-    }
+section.contact .content.right {
+    opacity: 0;
+}
+
+section.contact .content.right.show {
+    animation: LeftToRightAnimation .7s ease;
+    opacity: 1;
+}
 
 div.cards .feature {
     max-width: 13rem;
@@ -187,16 +192,16 @@ div.cards .feature {
     padding: 1rem .5rem;
     background: #efefef;
     border-radius: 1rem;
-    box-shadow: 0px 10px 42px -16px rgba(0,0,0,0.75);
+    box-shadow: 0px 10px 42px -16px rgba(0, 0, 0, 0.75);
     margin: .5rem;
     cursor: pointer;
     transition: .3s ease-out;
 }
 
-    div.cards .feature:hover {
-        transform: perspective(7.5rem) translate3d(0, 0, 10px);
-        transition: .5s;
-    }
+div.cards .feature:hover {
+    transform: perspective(7.5rem) translate3d(0, 0, 10px);
+    transition: .5s;
+}
 
 .feature h1 {
     color: var(--color-secondary);
@@ -218,29 +223,29 @@ section.singup {
     background: white;
 }
 
-    section.singup div {
-        min-width: fit-content;
-    }
+section.singup div {
+    min-width: fit-content;
+}
 
-        section.singup div.text {
-            width: 60%;
-            padding: 0 6rem 0 2rem;
-        }
+section.singup div.text {
+    width: 60%;
+    padding: 0 6rem 0 2rem;
+}
 
-            section.singup div.text h1 {
-                margin: 0;
-                color: var(--color-text-title);
-            }
+section.singup div.text h1 {
+    margin: 0;
+    color: var(--color-text-title);
+}
 
-            section.singup div.text p {
-                color: var(--color-text-setence);
-                margin: .1rem 0;
-            }
+section.singup div.text p {
+    color: var(--color-text-setence);
+    margin: .1rem 0;
+}
 
-        section.singup div.buttons {
-            width: 40%;
-            display: inline-flex;
-        }
+section.singup div.buttons {
+    width: 40%;
+    display: inline-flex;
+}
 
 button {
     font-size: 1rem;
@@ -254,24 +259,24 @@ button {
     border-radius: .5rem;
 }
 
-    button:hover {
-        box-shadow: 0px 1px 22px 2px #08ac52c4;
-        transform: perspective(7rem) translate3d(0, 0, .25rem);
-    }
+button:hover {
+    box-shadow: 0px 1px 22px 2px #08ac52c4;
+    transform: perspective(7rem) translate3d(0, 0, .25rem);
+}
 
-    button.positive {
-        background: linear-gradient(45deg, var(--color-secondary), #08ac4b);
-        border: none;
-        outline: none;
-        color: white;
-    }
+button.positive {
+    background: linear-gradient(45deg, var(--color-secondary), #08ac4b);
+    border: none;
+    outline: none;
+    color: white;
+}
 
-    button.negative {
-        border-color: var(--color-primary);
-        border-width: 1px;
-        color: var(--color-primary);
-        border-style: solid;
-    }
+button.negative {
+    border-color: var(--color-primary);
+    border-width: 1px;
+    color: var(--color-primary);
+    border-style: solid;
+}
 
 footer {
     text-align: center;
@@ -282,7 +287,8 @@ footer {
     padding: 0
 }
 
-.container, .container-sm {
+.container,
+.container-sm {
     width: 100%;
     margin: 0 auto;
     padding-left: 16px;
@@ -290,7 +296,9 @@ footer {
 }
 
 @media (min-width: 481px) {
-    .container, .container-sm {
+
+    .container,
+    .container-sm {
         padding-left: 24px;
         padding-right: 24px
     }
@@ -318,20 +326,21 @@ footer {
     justify-content: center;
 }
 
-    .carousel .image {
-        filter: grayscale(100%);
-        margin: 1.5rem 1rem;
-        padding: 0 .5rem;
-    }
+.carousel .image {
+    filter: grayscale(100%);
+    margin: 1.5rem 1rem;
+    padding: 0 .5rem;
+    transition: .45s;
+}
 
-        .carousel .image:hover {
-            filter: none;
-            margin: 1.5rem;
-            cursor: pointer;
-            padding: 0;
-            transform: perspective(3.5rem) translate3d(0, 0, 10px);
-            transition: .45s ease;
-        }
+.carousel .image:hover {
+    filter: none;
+    margin: 1.5rem;
+    cursor: pointer;
+    padding: 0;
+    transform: perspective(3.5rem) translate3d(0, 0, 10px);
+    transition: .45s ease;
+}
 
 .content-divided {
     width: 100%;
@@ -342,64 +351,62 @@ footer {
     align-items: center;
 }
 
-    .content-divided .divider {
-        width: 2%;
-        max-width: .4rem;
-        height: 30rem;
-        background: var(--color-secondary);
-        border-radius: 1rem;
-    }
+.content-divided .divider {
+    width: 2%;
+    max-width: .4rem;
+    height: 25rem;
+    background: var(--color-secondary);
+    border-radius: 1rem;
+}
 
-    .content-divided .content {
-        width: 49%;
-        min-width: 15rem;
-        padding: 2.5rem 0;
-        text-align: center;
-    }
+.content-divided .content {
+    width: 49%;
+    min-width: 15rem;
+    padding: 2.5rem 0;
+    text-align: center;
+}
 
-        .content-divided .content.right {
-        }
+.content-divided .content.right {}
 
-        .content-divided .content.left {
-        }
+.content-divided .content.left {}
 
-        .content-divided .content h1 {
-            font-size: xx-large;
-            color: var(--color-secondary);
-        }
+.content-divided .content h1 {
+    font-size: xx-large;
+    color: var(--color-secondary);
+}
 
-        .content-divided .content p {
-            max-width: 21rem;
-            margin: 1.25rem auto;
-            font-size: large;
-        }
+.content-divided .content p {
+    max-width: 21rem;
+    margin: 1.25rem auto;
+    font-size: large;
+}
 
-        .content-divided .content.background-gradient {
-            background: linear-gradient(121deg, var(--color-secondary), #102C57);
-            background-size: 600% 600%;
-            -webkit-animation: GradientAnimation 3s ease infinite;
-            -moz-animation: GradientAnimation 3s ease infinite;
-            -o-animation: GradientAnimation 3s ease infinite;
-            animation: GradientAnimation 3s ease infinite;
-            padding: 0 !important;
-        }
+.content-divided .content.background-gradient {
+    background: linear-gradient(121deg, var(--color-secondary), #102C57);
+    background-size: 600% 600%;
+    -webkit-animation: GradientAnimation 3s ease infinite;
+    -moz-animation: GradientAnimation 3s ease infinite;
+    -o-animation: GradientAnimation 3s ease infinite;
+    animation: GradientAnimation 3s ease infinite;
+    padding: 0 !important;
+}
 
-            .content-divided .content.background-gradient .ocutor {
-                background-image: url(../img/blob-scene.png);
-                background-repeat: no-repeat;
-                background-size: 100% 100%;
-                min-height: 14rem;
-                padding: 1rem !important;
-                display: flex;
-                justify-content: center;
-            }
+.content-divided .content.background-gradient .ocutor {
+    background-image: url(../img/blob-scene.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    min-height: 14rem;
+    padding: 1rem !important;
+    display: flex;
+    justify-content: center;
+}
 
-                .content-divided .content.background-gradient .ocutor img {
-                    max-width: 100%;
-                    max-height: 100%;
-                    display: block;
-                    margin: 0 auto;
-                }
+.content-divided .content.background-gradient .ocutor img {
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    margin: 0 auto;
+}
 
 .ocutor.normal {
     background-image: url(../img/blob-scene-1.png) !important;
@@ -409,7 +416,11 @@ footer {
     background-image: url(../img/blob-scene-2.png) !important;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
     color: var(--color-text-title);
     font-family: 'Heebo Bold';
     margin: .5rem;
@@ -429,7 +440,8 @@ span {
     font-weight: 600;
     font-size: 1.055rem;
     font-style: italic;
-    margin: 0 .125rem; /*
+    margin: 0 .125rem;
+    /*
     animation: SpanTextAnimation 4s ease infinite;*/
 }
 
@@ -449,28 +461,28 @@ b {
     word-wrap: normal !important
 }
 
-    .screen-reader-text:focus {
-        border-radius: 2px;
-        box-shadow: 0 0 2px 2px rgba(0,0,0,0.6);
-        clip: auto !important;
-        display: block;
-        font-family: "IBM Plex Sans", sans-serif;
-        font-size: 14px;
-        letter-spacing: 0px;
-        font-weight: 600;
-        line-height: 16px;
-        text-decoration: none;
-        text-transform: uppercase;
-        background-color: #fff;
-        color: #535FD7 !important;
-        border: none;
-        height: auto;
-        left: 8px;
-        padding: 16px 32px;
-        top: 8px;
-        width: auto;
-        z-index: 100000
-    }
+.screen-reader-text:focus {
+    border-radius: 2px;
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
+    clip: auto !important;
+    display: block;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-size: 14px;
+    letter-spacing: 0px;
+    font-weight: 600;
+    line-height: 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    background-color: #fff;
+    color: #535FD7 !important;
+    border: none;
+    height: auto;
+    left: 8px;
+    padding: 16px 32px;
+    top: 8px;
+    width: auto;
+    z-index: 100000
+}
 
 .site-footer {
     font-size: 14px;
@@ -480,19 +492,20 @@ b {
     color: #6B7A90
 }
 
-    .site-footer a {
-        color: #6B7A90;
-        text-decoration: none
-    }
+.site-footer a {
+    color: #6B7A90;
+    text-decoration: none
+}
 
-        .site-footer a:hover, .site-footer a:active {
-            text-decoration: none;
-            color: navajowhite;
-        }
+.site-footer a:hover,
+.site-footer a:active {
+    text-decoration: none;
+    color: navajowhite;
+}
 
-    .site-footer::before {
-        display: none
-    }
+.site-footer::before {
+    display: none
+}
 
 .lights-off .site-footer::before {
     display: block
@@ -506,28 +519,34 @@ b {
     padding-bottom: 48px
 }
 
-.footer-brand, .footer-links, .footer-social-links, .footer-copyright {
+.footer-brand,
+.footer-links,
+.footer-social-links,
+.footer-copyright {
     flex: none;
     width: 100%;
     display: inline-flex;
     justify-content: center
 }
 
-.footer-brand, .footer-links, .footer-social-links {
+.footer-brand,
+.footer-links,
+.footer-social-links {
     margin-bottom: 24px
 }
 
-    .footer-links li + li, .footer-social-links li + li {
-        margin-left: 16px
-    }
+.footer-links li+li,
+.footer-social-links li+li {
+    margin-left: 16px
+}
 
-    .footer-social-links li {
-        display: inline-flex
-    }
+.footer-social-links li {
+    display: inline-flex
+}
 
-        .footer-social-links li a {
-            padding: 8px
-        }
+.footer-social-links li a {
+    padding: 8px
+}
 
 .asset-logo {
     max-width: 2.5rem;
@@ -540,15 +559,20 @@ b {
         padding-bottom: 72px
     }
 
-    .footer-brand, .footer-links, .footer-social-links, .footer-copyright {
+    .footer-brand,
+    .footer-links,
+    .footer-social-links,
+    .footer-copyright {
         flex: 50%
     }
 
-    .footer-brand, .footer-copyright {
+    .footer-brand,
+    .footer-copyright {
         justify-content: flex-start
     }
 
-    .footer-links, .footer-social-links {
+    .footer-links,
+    .footer-social-links {
         justify-content: flex-end
     }
 
@@ -635,5 +659,19 @@ b {
 
     100% {
         transform: translate3d(0, 0, 0);
+    }
+}
+
+@keyframes LeftToRightAnimation {
+    0% {
+        opacity: 0;
+        filter: blur(10px);
+        transform: translate(-100%, 0);
+    }
+
+    100% {
+        filter: none;
+        opacity: 1;
+        transform: translate(0, 0);
     }
 }
