--- a/Site/Resources/css/index.css
+++ b/Site/Resources/css/index.css
@@ -223,9 +223,10 @@ section.singup {
     max-width: 50rem;
     border-radius: .8rem;
     text-align: left;
-    padding: 1.5rem;
-    box-shadow: 0px 10px 42px -16px rgb(0 0 0 / 75%);
-    margin-bottom: -10rem;
+    padding: .95rem;
+    box-shadow: 0px 10px 38px 3px rgb(0 0 0 / 60%);
+    margin-top: 5rem;
+    margin-bottom: -11rem;
     background: white;
 }
 
@@ -235,7 +236,7 @@ section.singup div {
 
 section.singup div.text {
     width: 60%;
-    padding: 0 6rem 0 2rem;
+    padding: 0 6rem 0 1rem;
 }
 
 section.singup div.text h1 {
@@ -250,6 +251,7 @@ section.singup div.text p {
 
 section.singup div.buttons {
     width: 40%;
+    padding-top: 1%;
     display: inline-flex;
 }
 
@@ -258,7 +260,7 @@ button {
     font-family: 'Heebo Regular';
     padding: .5rem 2.5rem;
     cursor: pointer;
-    min-width: 9rem;
+    min-width: 8.5rem;
     margin: .25rem;
     height: fit-content;
     transition: .2s ease;
@@ -494,6 +496,10 @@ b {
     letter-spacing: 0px;
     background: #182538;
     color: #6B7A90
+}
+
+.site-footer .container {
+    margin-top: -2rem;
 }
 
 .site-footer a {
