--- a/Site/Resources/css/index.css
+++ b/Site/Resources/css/index.css
@@ -75,7 +75,6 @@ main {
     -moz-animation: GradientAnimation 12s ease infinite;
     -o-animation: GradientAnimation 12s ease infinite;
     animation: GradientAnimation 12s ease infinite;
-    height: 80%;
     min-width: 100%;
     text-align: center;
     position: relative;
@@ -92,6 +91,12 @@ main::before {
     background: url(../img/wave.svg);
     background-repeat: repeat-x;
     z-index: 0;
+}
+
+@media screen and (max-width: 620px) {
+    main::before {
+        height: 8.3rem;
+    }
 }
 
 main section {
@@ -126,7 +131,7 @@ main section.read-more p {
 }
 
 main section.read-more img.arrow {
-    width: 3rem;
+    width: 3.5em;
     margin: 0;
     animation: MoreArrowAnimation 1.3s cubic-bezier(0.61, 0.01, 0.49, 0.8) infinite;
 }
@@ -193,7 +198,8 @@ section.contact .left img {
 }
 
 div.cards .feature {
-    max-width: 13rem;
+    max-width: 20em;
+    width: fit-content;
     text-align: center;
     padding: 1rem .5rem;
     background: #efefef;
@@ -255,6 +261,15 @@ section.singup div.buttons {
     display: inline-flex;
 }
 
+@media screen and (min-width: 820px) {
+    section.singup {
+        display: inline-block;
+    }
+
+    section.singup div.text {}
+}
+
+
 button {
     font-size: 1rem;
     font-family: 'Heebo Regular';
@@ -303,7 +318,7 @@ footer {
     padding-right: 16px
 }
 
-@media (min-width: 481px) {
+@media (min-device-width: 481px) {
 
     .container,
     .container-sm {
@@ -353,11 +368,15 @@ footer {
 
 .content-divided {
     width: 100%;
-    max-width: 65rem;
     margin: 0 auto !important;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+}
+
+.content-divided.reverse {
+    flex-wrap: wrap-reverse;
 }
 
 .content-divided .divider {
@@ -370,7 +389,8 @@ footer {
 
 .content-divided .content {
     width: 49%;
-    min-width: 15rem;
+    min-width: 500px;
+    max-width: 25rem;
     padding: 2.5rem 0;
     text-align: center;
     z-index: 10;
@@ -562,7 +582,7 @@ b {
     max-width: 2.5rem;
 }
 
-@media (min-width: 641px) {
+@media screen and (min-device-width: 641px) and (min-width: 1200px) {
     .site-footer-inner {
         justify-content: space-between;
         padding-top: 72px;
