--- a/Site/Resources/css/index.css
+++ b/Site/Resources/css/index.css
@@ -143,7 +143,7 @@ main section.read-more img.arrow:hover {
 }
 
 section.body {
-    margin: 0 5%;
+    margin: 0 1.5%;
 }
 
 section.advantages div.cards {
@@ -151,7 +151,7 @@ section.advantages div.cards {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: safe center;
-    margin: 1rem;
+    margin: 1rem 0;
 }
 
 section.body .header {
@@ -198,7 +198,7 @@ section.contact .left img {
 }
 
 div.cards .feature {
-    max-width: 20em;
+    max-width: 13.5rem;
     width: fit-content;
     text-align: center;
     padding: 1rem .5rem;
@@ -497,7 +497,8 @@ b {
     line-height: 20px;
     letter-spacing: 0px;
     background: #182538;
-    color: #6B7A90
+    color: #6B7A90;
+    padding: 0 2.5rem;
 }
 
 .site-footer .container {
