--- a/Site/Views/Shared/_Layout.cshtml.css
+++ b/Site/Views/Shared/_Layout.cshtml.css
@@ -90,80 +90,6 @@ nav {
     }
 }
 
-footer {
-    text-align: center;
-    background: var(--color-footer);
-}
-
-.site-footer {
-    font-size: 14px;
-    line-height: 20px;
-    letter-spacing: 0px;
-    background: var(--color-footer);
-    color: #6B7A90;
-    padding: 0 2.5rem;
-}
-
-    .site-footer .container {
-        margin-top: -2rem;
-    }
-
-    .site-footer a {
-        color: #6B7A90;
-        text-decoration: none
-    }
-
-        .site-footer a:hover,
-        .site-footer a:active {
-            text-decoration: none;
-            color: navajowhite;
-        }
-
-    .site-footer::before {
-        display: none
-    }
-
-.lights-off .site-footer::before {
-    display: block
-}
-
-.site-footer-inner {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    padding-top: 48px;
-    padding-bottom: 48px
-}
-
-.footer-brand,
-.footer-links,
-.footer-social-links,
-.footer-copyright {
-    flex: none;
-    width: 100%;
-    display: inline-flex;
-    justify-content: center
-}
-
-.footer-brand,
-.footer-links,
-.footer-social-links {
-    margin-bottom: 24px
-}
-
-    .footer-links li + li,
-    .footer-social-links li + li {
-        margin-left: 16px
-    }
-
-    .footer-social-links li {
-        display: inline-flex
-    }
-
-        .footer-social-links li a {
-            padding: 8px
-        }
-
 .list-reset {
     list-style: none;
     padding: 0
@@ -173,88 +99,7 @@ footer {
     max-width: 2.5rem;
 }
 
-@media (max-width: 860px) {
-    section.singup {
-        display: inline-block;
-        margin: 3rem 2rem 0rem 0rem;
-        text-align: center;
-    }
-
-        section.singup div.text {
-            text-align: center;
-            width: 100%;
-            margin: 0 3rem 0rem 0rem;
-            padding: 0;
-        }
-}
-
-@media screen and (min-device-width: 641px) and (min-width: 860px) {
-    .site-footer-inner {
-        justify-content: space-between;
-        padding-top: 72px;
-        padding-bottom: 72px
-    }
-
-    .footer-brand,
-    .footer-links,
-    .footer-social-links,
-    .footer-copyright {
-        flex: 50%
-    }
-
-    .footer-brand,
-    .footer-copyright {
-        justify-content: flex-start
-    }
-
-    .footer-links,
-    .footer-social-links {
-        justify-content: flex-end
-    }
-
-    .footer-links {
-        order: 1;
-        margin-bottom: 0
-    }
-}
-
-section.content.footer {
-    padding: 0 0 12rem 0;
-    margin: -3rem 0 -12rem 0;
-}
-
-    section.content.footer .right {
-    }
-
-    section.content.footer img {
-        background: var(--color-bg-ultra-dark);
-    }
-
-    section.content.footer .content-divided {
-        background: var(--color-footer);
-        margin: -3rem auto !important
-    }
-
-        section.content.footer .content-divided img {
-            background: transparent;
-            margin: 0;
-            padding: 0;
-            width: 800px;
-            max-width: 60%;
-            transform: scale3d(1.25, 1.25, 1.5);
-            animation: floating 3s ease-in-out infinite;
-        }
-
-@keyframes floating {
-    0% {
-        transform: scale3d(1.15, 1.15, 1.5) translate(-5px, 0px);
-    }
-
-    50% {
-        transform: scale3d(1.15, 1.15, 1.5) translate(5px, 15px);
-    }
-
-    100% {
-        transform: scale3d(1.15, 1.15, 1.5) translate(-5px, 0px);
-    }
+main {
+    position: relative;
+    z-index: 1;
 }
