--- a/Site/Views/Shared/_Layout.cshtml
+++ b/Site/Views/Shared/_Layout.cshtml
@@ -1,21 +1,28 @@
-﻿<html>
+﻿@using System.Threading;
+<!DOCTYPE html>
+<html lang="@Thread.CurrentThread.CurrentUICulture.ToString()" class="no-js">
 <head>
-    <meta charset="utf-8">
-    <meta name="HandheldFriendly" content="true">
-    <meta name="MobileOptimized" content="320">
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=device-width, user-scalable=no">
-    <title>Nexus Company</title>
-    <link rel="icon" href="favicon.ico">
-    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true" />
-    <link href="~/lib/font-awsome/css/all.css" rel="stylesheet" asp-append-version="true" />
+    <meta charset="utf-8" />
+    <meta name="HandheldFriendly" content="true" />
+    <meta name="MobileOptimized" content="320" />
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=device-width, user-scalable=no" />
+    <title>@ViewData["Title"] - Nexus</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Nexus.Web.styles.css" asp-append-version="true" />
-    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <link href="~/font/Heebo/heebo.css" rel="stylesheet" asp-append-version="true">
+    <link rel="stylesheet" href="~/css/main.css">
+    <link href="~/lib/font-awesome/css/fontawesome.css" rel="stylesheet">
+    <link href="~/lib/font-awesome/css/brands.css" rel="stylesheet">
+    <link href="~/lib/font-awesome/css/solid.css" rel="stylesheet">
+    <link href="~/css/footer.css" rel="stylesheet">
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="https://hcaptcha.com/1/api.js" async defer></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 </head>
 
-<body>
+<body class="is-boxed has-animations">
     <nav>
         <div class="container">
             <h2>Nexus Company</h2>
@@ -26,93 +33,93 @@
         </div>
     </nav>
 
-    @RenderBody()
+    <main class="body-wrap boxed-container content">
+        @RenderBody()
 
-    <section class="content footer">
-        <img src="~/img/wave-inverted.svg">
-        <div class="content-divided">
-            <div class="content left background">
-                <img src="~/img/blob-wave.png">
-            </div>
-
-            <div class="content right slide">
-                <h1>Juan Douglas</h1>
-                <p>A <a href="~/Home/Index">Nexus Company</a> tem como objetivo trazer qualidade, segurança e eficiência em todos os seus softwares, assim dando a melhor experiência aos seus usuários.</p>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        <section class="singup" id="singup">
-            <div class="text">
-                <h2>Não é membro da Nexus ?</h2>
-                <p class="text-sm mb-0">
-                    Cadastra-se e trabalhe com quem sabe fazer a diferen&ccedil;a.
-                </p>
-            </div>
-            <div class="buttons">
-                <button type="button" class="positive" onclick="window.location.href='https://oauth.nexus-company.net/Account/Register'">
-                    Registre-se
-                </button>
-            </div>
-        </section>
-
-        <section class="site-footer has-top-divider">
-            <div class="container">
-                <div class="site-footer-inner">
-                    <div class="brand footer-brand">
-                    </div>
-                    <ul class="footer-links list-reset">
-                        <li>
-                            <a href="https://nexus-company.net">Inicio</a>
-                        </li>
-                        <li>
-                            <a href="https://oauth.nexus-company.net/Home/Contact">Contato</a>
-                        </li>
-                        <li>
-                            <a href="https://oauth.nexus-company.net/Home/Privacy">Privacidade</a>
-                        </li>
-                        <li>
-                            <a href="https://wa.me/5561992503344?text=Hello%2C+I%27m+need+support+can+you+help+me%3F%21">Equipe</a>
-                        </li>
-                    </ul> <ul class="footer-social-links list-reset">
-                        <li>
-                            <a href="https://www.linkedin.com/company/nexuscompany">
-                                <span class="screen-reader-text">Linkedin</span>
-                                <i class="fa fa-lg fa-brands fa-linkedin"> </i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/TheNexusCompany">
-                                <span class="screen-reader-text">Twitter</span>
-                                <i class="fa fa-lg fa-brands fa-twitter"> </i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.instagram.com/company.nexus/">
-                                <span class="screen-reader-text">Instagram</span>
-                                <i class="fa fa-lg fa-brands fa-instagram"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://wa.me/5561992606441?text=Ol%C3%A1%2C%20pode%20me%20ajudar?">
-                                <span class="screen-reader-text">Whatsapp</span>
-                                <i class="fa fa-lg fa-brands fa-whatsapp"></i>
-                            </a>
-                        </li>
-                    </ul>
-                    <div class="footer-copyright">©2023 Nexus Company, todos os direitos reservados.</div>
+        <section class="content footer">
+            <img src="~/img/wave-inverted.svg">
+            <div class="content-divided">
+                <div class="content left background">
+                    <img src="~/img/blob-wave.png">
+                </div>
+                <div class="content right slide">
+                    <h1>Juan Douglas</h1>
+                    <p>A <a href="~/Home/Index">Nexus Company</a> tem como objetivo trazer qualidade, seguran&ccedil;a e efici&ecirc;ncia em todos os seus softwares, assim dando a melhor experi&ecirc;ncia aos seus usu&aacute;rios.</p>
                 </div>
             </div>
         </section>
-    </footer>
 
-    <div class="modal modal-full" id="redirectModal" aria-hidden="true" data-backdrop="static" data-keyboard="false">
-        <div class="modal-dialog modal-dialog-full" role="document" style="min-width: 100%;z-index:100000;margin: 0;min-height: 100%;">
-            <div class="modal-content" style="height: 100%;">
-                <iframe src="Redirect/index.html" title="description" style="min-width: 100%;min-height: 100%;"></iframe>
-            </div>
-        </div>
-    </div>
+        <footer>
+            <section class="singup" id="singup">
+                <div class="text">
+                    <h3>Não é membro da Nexus ?</h3>
+                    <p class="text-sm mb-0">
+                        Cadastra-se e trabalhe com quem sabe fazer a diferen&ccedil;a.
+                    </p>
+                </div>
+                <div class="buttons">
+                    <button type="button" class="button button-primary"
+                            onclick="redirectAndBack('/Account/Register');">
+                        Cadastro
+                    </button>
+                </div>
+            </section>
+
+            <section class="site-footer has-top-divider">
+                <div class="container">
+                    <div class="site-footer-inner">
+                        <div class="brand footer-brand">
+                        </div>
+                        <ul class="footer-links list-reset">
+                            <li>
+                                <a href="https://oauth.nexus-company.net/Home/Index">Inicio</a>
+                            </li>
+                            <li>
+                                <a href="https://oauth.nexus-company.net/Home/Contact">Contato</a>
+                            </li>
+                            <li>
+                                <a href="https://oauth.nexus-company.net/Home/Privacy">Privacidade</a>
+                            </li>
+                            <li>
+                                <a href="https://wa.me/5561992503344?text=Hello%2C+I%27m+need+support+can+you+help+me%3F%21">Equipe</a>
+                            </li>
+                        </ul>
+                        <ul class="footer-social-links list-reset">
+                            <li>
+                                <a href="https://www.linkedin.com/company/nexuscompany">
+                                    <span class="screen-reader-text">Linkedin</span>
+                                    <i class="fa fa-lg fa-brands fa-linkedin"> </i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/TheNexusCompany">
+                                    <span class="screen-reader-text">Twitter</span>
+                                    <i class="fa fa-lg fa-brands fa-twitter"> </i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/company.nexus/">
+                                    <span class="screen-reader-text">Instagram</span>
+                                    <i class="fa fa-lg fa-brands fa-instagram"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://wa.me/5561992606441?text=Ol%C3%A1%2C%20pode%20me%20ajudar?">
+                                    <span class="screen-reader-text">Whatsapp</span>
+                                    <i class="fa fa-lg fa-brands fa-whatsapp"></i>
+                                </a>
+                            </li>
+                        </ul>
+                        <div class="footer-copyright">© @DateTime.UtcNow.Year Nexus Company, todos os direitos reservados.</div>
+                    </div>
+                </div>
+            </section>
+        </footer>
+    </main>
+
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @await RenderSectionAsync("Modals", required: false)
+    @*@await Html.PartialAsync("_RedirectModal")*@
 </body>
+
 </html>
